--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+* 2018.12.15 - [FGG] fixed compilation of SyLT for Android
+
 * 2018.11.27 - [FGG] added soft,package and program for FAI-PEP
              - [FGG] added basic workflow for MLPerf SyLT
              - [FGG] added soft and package for MLModelScope
