Map experiment points to runs for performance mode.

--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -337,7 +337,8 @@
     "        mode_dir = os.path.join(scenario_dir, mode)\n",
     "        if not os.path.exists(mode_dir): os.mkdir(mode_dir)\n",
     "        # For each point (should be one point per experiment).\n",
-    "        for point in r['points']:\n",
+    "        points = r['points']\n",
+    "        for (point, point_idx) in zip(points, range(1,len(points)+1)):\n",
     "            point_file_path = os.path.join(r['path'], 'ckp-%s.0001.json' % point)\n",
     "            with open(point_file_path) as point_file:\n",
     "                point_data_raw = json.load(point_file)\n",
@@ -345,7 +346,7 @@
     "            characteristics = characteristics_list[0]\n",
     "            # Set the leaf directory.\n",
     "            if mode == 'performance':\n",
-    "                run_dir = os.path.join(mode_dir, 'run_1') # FIXME: run_1, run_2, ...\n",
+    "                run_dir = os.path.join(mode_dir, 'run_%d' % point_idx)\n",
     "                if not os.path.exists(run_dir): os.mkdir(run_dir)\n",
     "                last_dir = run_dir\n",
     "            else:\n",
