Add Firefly-RK3399 system description.

--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -35,8 +35,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"platform\"></a>\n",
-    "## Platforms"
+    "<a id=\"systems\"></a>\n",
+    "## Systems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Firefly-RK3399"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "firefly_tflite = {\n",
+    "    \"division\": \"open\",\n",
+    "    \"submitter\": \"dividiti\",\n",
+    "    \"status\": \"available\",\n",
+    "    \"system_name\": \"Firefly-RK3399\",\n",
+    "\n",
+    "    \"number_of_nodes\": \"1\",\n",
+    "    \"host_processor_model_name\": \"Arm Cortex-A73 (big), Arm Cortex-A53 (LITTLE)\",\n",
+    "    \"host_processors_per_node\": \"1\",\n",
+    "    \"host_processor_core_count\": \"2 (big), 4 (LITTLE)\",\n",
+    "    \"host_processor_frequency\": \"1800 MHz (big), 1400 MHz (LITTLE)\",\n",
+    "    \"host_processor_caches\": \"N/A\",\n",
+    "    \"host_memory_configuration\": \"?\",\n",
+    "    \"host_memory_capacity\": \"4 GB\",\n",
+    "    \"host_storage_capacity\": \"128 GB\",\n",
+    "    \"host_storage_type\": \"microSD\",\n",
+    "    \"host_processor_interconnect\": \"N/A\",\n",
+    "    \"host_networking\": \"N/A\",\n",
+    "    \"host_networking_topology\": \"N/A\",\n",
+    "\n",
+    "    \"accelerators_per_node\": \"1\",\n",
+    "    \"accelerator_model_name\": \"Arm Mali-T860 MP4\",\n",
+    "    \"accelerator_frequency\": \"800 MHz\",\n",
+    "    \"accelerator_host_interconnect\": \"N/A\",\n",
+    "    \"accelerator_interconnect\": \"N/A\",\n",
+    "    \"accelerator_interconnect_topology\": \"N/A\",\n",
+    "    \"accelerator_memory_capacity\": \"4 GB (shared)\",\n",
+    "    \"accelerator_memory_configuration\": \"?\",\n",
+    "    \"accelerator_on-chip_memories\": \"N/A\",\n",
+    "    \"cooling\": \"on-board fan\",\n",
+    "    \"hw_notes\": \"http://en.t-firefly.com/product/rk3399/\",\n",
+    "\n",
+    "    \"framework\": \"TFLite-v1.15-rc2\",\n",
+    "    \"operating_system\": \"Ubuntu 16.04.6 LTS\",\n",
+    "    \"other_software_stack\": \"Collective Knowledge v1.11.1\",\n",
+    "    \"sw_notes\": \"Powered by CK\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "systems = {\n",
+    "    'firefly-tflite-v1.15' : firefly_tflite\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# system_desc_id.json\n",
+    "default_system_desc_id = {\n",
+    "    \"division\": \"reqired\",\n",
+    "    \"submitter\": \"required\",\n",
+    "    \"status\": \"required\",\n",
+    "    \"system_name\": \"required\",\n",
+    "\n",
+    "    \"number_of_nodes\": \"required\",\n",
+    "    \"host_processor_model_name\": \"required\",\n",
+    "    \"host_processors_per_node\": \"required\",\n",
+    "    \"host_processor_core_count\": \"required\",\n",
+    "    \"host_processor_frequency\": \"\",\n",
+    "    \"host_processor_caches\": \"\",\n",
+    "    \"host_memory_configuration\": \"\",\n",
+    "    \"host_memory_capacity\": \"required\",\n",
+    "    \"host_storage_capacity\": \"required\",\n",
+    "    \"host_storage_type\": \"required\",\n",
+    "    \"host_processor_interconnect\": \"\",\n",
+    "    \"host_networking\": \"\",\n",
+    "    \"host_networking_topology\": \"\",\n",
+    "\n",
+    "    \"accelerators_per_node\": \"required\",\n",
+    "    \"accelerator_model_name\": \"required\",\n",
+    "    \"accelerator_frequency\": \"\",\n",
+    "    \"accelerator_host_interconnect\": \"\",\n",
+    "    \"accelerator_interconnect\": \"\",\n",
+    "    \"accelerator_interconnect_topology\": \"\",\n",
+    "    \"accelerator_memory_capacity\": \"required\",\n",
+    "    \"accelerator_memory_configuration\": \"\",\n",
+    "    \"accelerator_on-chip_memories\": \"\",\n",
+    "    \"cooling\": \"\",\n",
+    "    \"hw_notes\": \"\",\n",
+    "\n",
+    "    \"framework\": \"required\",\n",
+    "    \"operating_system\": \"required\",\n",
+    "    \"other_software_stack\": \"required\",\n",
+    "    \"sw_notes\": \"\"\n",
+    "}\n",
+    "\n",
+    "# system_desc_id_imp.json\n",
+    "default_system_desc_id_tmp = {\n",
+    "    \"input_data_types\": \"required\",\n",
+    "    \"retraining\": \"required\",\n",
+    "    \"starting_weights_filename\": \"required\",\n",
+    "    \"weight_data_types\": \"required\",\n",
+    "    \"weight_transformations\": \"required\"\n",
+    "}"
    ]
   },
   {
@@ -307,6 +425,8 @@
     "        #\n",
     "        # <division>/\n",
     "        #   <organization>/\n",
+    "        #     \"systems\"/\n",
+    "        #       <system_desc_id>.json\n",
     "        #     \"results\"/\n",
     "        #       <system_desc_id>/\n",
     "        #         <benchmark>/\n",
@@ -326,6 +446,15 @@
     "        if not os.path.exists(division_dir): os.mkdir(division_dir)\n",
     "        organization_dir = os.path.join(division_dir, organization)\n",
     "        if not os.path.exists(organization_dir): os.mkdir(organization_dir)\n",
+    "        # \"systems\"/\n",
+    "        systems_dir = os.path.join(organization_dir, 'systems')\n",
+    "        if not os.path.exists(systems_dir): os.mkdir(systems_dir)\n",
+    "        system_json_name = '%s.json' % system\n",
+    "        system_json_path = os.path.join(systems_dir, system_json_name)\n",
+    "        with open(system_json_path, 'w') as system_json_file:\n",
+    "            json.dump(systems.get(system, default_system_desc_id), system_json_file, indent=2)\n",
+    "            print('  |_ %s' % system_json_name)\n",
+    "        # \"results\"/\n",
     "        results_dir = os.path.join(organization_dir, 'results')\n",
     "        if not os.path.exists(results_dir): os.mkdir(results_dir)\n",
     "        system_dir = os.path.join(results_dir, system)\n",
@@ -336,7 +465,7 @@
     "        if not os.path.exists(scenario_dir): os.mkdir(scenario_dir)\n",
     "        mode_dir = os.path.join(scenario_dir, mode)\n",
     "        if not os.path.exists(mode_dir): os.mkdir(mode_dir)\n",
-    "        # For each point (should be one point per experiment).\n",
+    "        # For each point (should be one point for each performance run).\n",
     "        points = r['points']\n",
     "        for (point, point_idx) in zip(points, range(1,len(points)+1)):\n",
     "            point_file_path = os.path.join(r['path'], 'ckp-%s.0001.json' % point)\n",
@@ -367,12 +496,15 @@
     "                detail_txt_file.writelines(mlperf_log.get('detail',''))\n",
     "                print('  |_ %s' % detail_txt_name)\n",
     "            # Accuracy file (with accuracy dictionary).\n",
+    "            # FIXME: Move the next 5 lines into the (if mode == 'accuracy') block,\n",
+    "            # once the submission checker no longer complains as follows:\n",
+    "            # \"performance/run_1 has file list mismatch (['mlperf_log_accuracy.json'])\"\n",
+    "            accuracy_json_name = 'mlperf_log_accuracy.json'\n",
+    "            accuracy_json_path = os.path.join(last_dir, accuracy_json_name)\n",
+    "            with open(accuracy_json_path, 'w') as accuracy_json_file:\n",
+    "                json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file)\n",
+    "                print('  |_ %s' % accuracy_json_name)\n",
     "            if mode == 'accuracy':\n",
-    "                accuracy_json_name = 'mlperf_log_accuracy.json'\n",
-    "                accuracy_json_path = os.path.join(last_dir, accuracy_json_name)\n",
-    "                with open(accuracy_json_path, 'w') as accuracy_json_file:\n",
-    "                    json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file)\n",
-    "                    print('  |_ %s' % accuracy_json_name)\n",
     "                # FIXME: Do not hardcode - locate via CK.\n",
     "                accuracy_imagenet_py = '$HOME/CK_TOOLS/mlperf-inference-upstream.master/inference/v0.5/classification_and_detection/tools/accuracy-imagenet.py'\n",
     "                imagenet_val_file = '$HOME/CK_TOOLS/dataset-imagenet-ilsvrc2012-aux/val.txt'\n",
