--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -43,6 +43,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Defaults"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# system_desc_id.json\n",
+    "default_system = {\n",
+    "    \"division\": \"reqired\",\n",
+    "    \"submitter\": \"required\",\n",
+    "    \"status\": \"required\",\n",
+    "    \"system_name\": \"required\",\n",
+    "\n",
+    "    \"number_of_nodes\": \"required\",\n",
+    "    \"host_processor_model_name\": \"required\",\n",
+    "    \"host_processors_per_node\": \"required\",\n",
+    "    \"host_processor_core_count\": \"required\",\n",
+    "    \"host_processor_frequency\": \"\",\n",
+    "    \"host_processor_caches\": \"\",\n",
+    "    \"host_memory_configuration\": \"\",\n",
+    "    \"host_memory_capacity\": \"required\",\n",
+    "    \"host_storage_capacity\": \"required\",\n",
+    "    \"host_storage_type\": \"required\",\n",
+    "    \"host_processor_interconnect\": \"\",\n",
+    "    \"host_networking\": \"\",\n",
+    "    \"host_networking_topology\": \"\",\n",
+    "\n",
+    "    \"accelerators_per_node\": \"required\",\n",
+    "    \"accelerator_model_name\": \"required\",\n",
+    "    \"accelerator_frequency\": \"\",\n",
+    "    \"accelerator_host_interconnect\": \"\",\n",
+    "    \"accelerator_interconnect\": \"\",\n",
+    "    \"accelerator_interconnect_topology\": \"\",\n",
+    "    \"accelerator_memory_capacity\": \"required\",\n",
+    "    \"accelerator_memory_configuration\": \"\",\n",
+    "    \"accelerator_on-chip_memories\": \"\",\n",
+    "    \"cooling\": \"\",\n",
+    "    \"hw_notes\": \"\",\n",
+    "\n",
+    "    \"framework\": \"required\",\n",
+    "    \"operating_system\": \"required\",\n",
+    "    \"other_software_stack\": \"required\",\n",
+    "    \"sw_notes\": \"\"\n",
+    "}\n",
+    "\n",
+    "# system_desc_id_imp.json\n",
+    "default_system_implementation = {\n",
+    "    \"input_data_types\": \"fp32\",\n",
+    "    \"retraining\": \"no\",\n",
+    "    \"starting_weights_filename\": \"TODO\",\n",
+    "    \"weight_data_types\": \"fp32\",\n",
+    "    \"weight_transformations\": \"TFLite -> ArmNN\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Firefly-RK3399"
    ]
   },
@@ -92,6 +154,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -108,52 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# system_desc_id.json\n",
-    "default_system_desc_id = {\n",
-    "    \"division\": \"reqired\",\n",
-    "    \"submitter\": \"required\",\n",
-    "    \"status\": \"required\",\n",
-    "    \"system_name\": \"required\",\n",
-    "\n",
-    "    \"number_of_nodes\": \"required\",\n",
-    "    \"host_processor_model_name\": \"required\",\n",
-    "    \"host_processors_per_node\": \"required\",\n",
-    "    \"host_processor_core_count\": \"required\",\n",
-    "    \"host_processor_frequency\": \"\",\n",
-    "    \"host_processor_caches\": \"\",\n",
-    "    \"host_memory_configuration\": \"\",\n",
-    "    \"host_memory_capacity\": \"required\",\n",
-    "    \"host_storage_capacity\": \"required\",\n",
-    "    \"host_storage_type\": \"required\",\n",
-    "    \"host_processor_interconnect\": \"\",\n",
-    "    \"host_networking\": \"\",\n",
-    "    \"host_networking_topology\": \"\",\n",
-    "\n",
-    "    \"accelerators_per_node\": \"required\",\n",
-    "    \"accelerator_model_name\": \"required\",\n",
-    "    \"accelerator_frequency\": \"\",\n",
-    "    \"accelerator_host_interconnect\": \"\",\n",
-    "    \"accelerator_interconnect\": \"\",\n",
-    "    \"accelerator_interconnect_topology\": \"\",\n",
-    "    \"accelerator_memory_capacity\": \"required\",\n",
-    "    \"accelerator_memory_configuration\": \"\",\n",
-    "    \"accelerator_on-chip_memories\": \"\",\n",
-    "    \"cooling\": \"\",\n",
-    "    \"hw_notes\": \"\",\n",
-    "\n",
-    "    \"framework\": \"required\",\n",
-    "    \"operating_system\": \"required\",\n",
-    "    \"other_software_stack\": \"required\",\n",
-    "    \"sw_notes\": \"\"\n",
-    "}\n",
-    "\n",
-    "# system_desc_id_imp.json\n",
-    "default_system_desc_id_tmp = {\n",
-    "    \"input_data_types\": \"required\",\n",
-    "    \"retraining\": \"required\",\n",
-    "    \"starting_weights_filename\": \"required\",\n",
-    "    \"weight_data_types\": \"required\",\n",
-    "    \"weight_transformations\": \"required\"\n",
+    "systems_implementations = {\n",
     "}"
    ]
   },
@@ -395,10 +419,11 @@
     "    if not path:\n",
     "        path_list = !ck find repo:$repo_uoa\n",
     "        path = path_list[0]\n",
-    "    print(\"Storing results under '%s' ...\\n\" % path)\n",
+    "    root_dir = os.path.join(path, 'submissions_inference_0_5')\n",
+    "    if not os.path.exists(root_dir): os.mkdir(root_dir)        \n",
+    "    print(\"Storing results under '%s' ...\" % root_dir)\n",
     "    \n",
     "    r = ck.access({'action':'search', 'repo_uoa':repo_uoa, 'module_uoa':module_uoa, 'tags':tags})\n",
-    "#    pprint (r)\n",
     "    if r['return']>0:\n",
     "        print('Error: %s' % r['error'])\n",
     "        exit(1)\n",
@@ -411,6 +436,7 @@
     "        if r['return']>0:\n",
     "            print('Error: %s' % r['error'])\n",
     "            exit(1)\n",
+    "        print(\"\")\n",
     "        \n",
     "        tags = r['dict']['tags']\n",
     "        # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"tflite-v1.15\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"performance\" ]\n",
@@ -420,13 +446,95 @@
     "            (_, division, task, platform, library, benchmark, scenario, mode) = tags\n",
     "        organization = submitter\n",
     "        system = platform+'-'+library\n",
-    "        \n",
-    "        # Directory structure for submissions according to MLPerf Inference Rules:\n",
+    "\n",
+    "        # Directory structure according to the Inference section of the General MLPerf Submission Rules:\n",
+    "        # https://github.com/mlperf/policies/blob/master/submission_rules.adoc#552-inference\n",
     "        #\n",
     "        # <division>/\n",
     "        #   <organization>/\n",
+    "        #\n",
+    "        division_dir = os.path.join(root_dir, division)\n",
+    "        if not os.path.exists(division_dir): os.mkdir(division_dir)\n",
+    "        organization_dir = os.path.join(division_dir, organization)\n",
+    "        if not os.path.exists(organization_dir): os.mkdir(organization_dir)\n",
+    "        #\n",
     "        #     \"systems\"/\n",
     "        #       <system_desc_id>.json\n",
+    "        #\n",
+    "        systems_dir = os.path.join(organization_dir, 'systems')\n",
+    "        if not os.path.exists(systems_dir): os.mkdir(systems_dir)\n",
+    "        system_json_name = '%s.json' % system\n",
+    "        system_json_path = os.path.join(systems_dir, system_json_name)\n",
+    "        with open(system_json_path, 'w') as system_json_file:\n",
+    "            json.dump(systems.get(system, default_system), system_json_file, indent=2)\n",
+    "            print('%s' % systems_dir)\n",
+    "            print('  |_ %s' % system_json_name)\n",
+    "        #\n",
+    "        #     \"code\"/\n",
+    "        #       <benchmark_name_per_reference>/\n",
+    "        #         <implementation_id>/\n",
+    "        #           <Code interface with loadgen and other arbitrary stuff>\n",
+    "        #\n",
+    "        code_dir = os.path.join(organization_dir, 'code')\n",
+    "        if not os.path.exists(code_dir): os.mkdir(code_dir)\n",
+    "        # FIXME: For now, not always \"per reference\".\n",
+    "        benchmark_dir = os.path.join(code_dir, benchmark)\n",
+    "        if not os.path.exists(benchmark_dir): os.mkdir(benchmark_dir)\n",
+    "        implementation_id = task+'_'+scenario\n",
+    "        implementation_dir = os.path.join(benchmark_dir, implementation_id)\n",
+    "        if not os.path.exists(implementation_dir): os.mkdir(implementation_dir)\n",
+    "        print('%s' % code_dir)\n",
+    "        print('  |_ %s [DEFAULT]' % implementation_id)\n",
+    "#         # Would seem logical but not what the checker expects.     \n",
+    "#         for library in [ 'tflite', 'armnn-tflite' ]:\n",
+    "#             implementation_dir = os.path.join(benchmark_dir, task+'-'+library)\n",
+    "#             if not os.path.exists(implementation_dir): os.mkdir(implementation_dir)\n",
+    "        #\n",
+    "        #     \"measurements\"/\n",
+    "        #       <system_desc_id>/\n",
+    "        #         <benchmark>/\n",
+    "        #           <scenario>/\n",
+    "        #             <system_desc_id>_<implementation_id>_<scenario>.json\n",
+    "        #             README.md\n",
+    "        #             user.conf\n",
+    "        #             mlperf.conf\n",
+    "        #             calibration_process.adoc (?)\n",
+    "        #\n",
+    "        measurements_dir = os.path.join(organization_dir, 'measurements')\n",
+    "        if not os.path.exists(measurements_dir): os.mkdir(measurements_dir)\n",
+    "        system_dir = os.path.join(measurements_dir, system)\n",
+    "        if not os.path.exists(system_dir): os.mkdir(system_dir)\n",
+    "        benchmark_dir = os.path.join(system_dir, benchmark)\n",
+    "        if not os.path.exists(benchmark_dir): os.mkdir(benchmark_dir)\n",
+    "        scenario_dir = os.path.join(benchmark_dir, scenario)\n",
+    "        if not os.path.exists(scenario_dir): os.mkdir(scenario_dir)\n",
+    "        print(scenario_dir)\n",
+    "        # Touch empty files.\n",
+    "        # <system_desc_id>_<implementation_id>_<scenario>.json\n",
+    "        s_i_s_json_name = system+'_'+task+'_'+scenario+'.json'\n",
+    "        s_i_s_json_path = os.path.join(scenario_dir, s_i_s_json_name)\n",
+    "        with open(s_i_s_json_path, 'w') as s_i_s_json_file:\n",
+    "            json.dump(systems_implementations.get(system, default_system_implementation), s_i_s_json_file, indent=2)\n",
+    "            print('  |_ %s [DEFAULT]' % s_i_s_json_name)\n",
+    "        # README.md\n",
+    "        readme_name = 'README.md'\n",
+    "        readme_path = os.path.join(scenario_dir, readme_name)\n",
+    "        with open(readme_path, 'a'):\n",
+    "            os.utime(readme_path, None)\n",
+    "            print('  |_ %s [EMPTY]' % readme_name)\n",
+    "        # user.conf\n",
+    "        user_conf_name = 'user.conf'\n",
+    "        user_conf_path = os.path.join(scenario_dir, user_conf_name)\n",
+    "        with open(user_conf_path, 'a'):\n",
+    "            os.utime(user_conf_path, None)\n",
+    "            print('  |_ %s [EMPTY]' % user_conf_name)\n",
+    "        # mlperf.conf\n",
+    "        mlperf_conf_name = 'mlperf.conf'\n",
+    "        mlperf_conf_path = os.path.join(scenario_dir, mlperf_conf_name)\n",
+    "        with open(mlperf_conf_path, 'a'):\n",
+    "            os.utime(mlperf_conf_path, None)\n",
+    "            print('  |_ %s [EMPTY]' % mlperf_conf_name)\n",
+    "        #\n",
     "        #     \"results\"/\n",
     "        #       <system_desc_id>/\n",
     "        #         <benchmark>/\n",
@@ -438,23 +546,8 @@
     "        #                 mlperf_log_trace.json\n",
     "        #             accuracy/\n",
     "        #               mlperf_log_accuracy.json\n",
-    "        #   compliance_checker_log.txt\n",
+    "        #       compliance_checker_log.txt (?)\n",
     "        #\n",
-    "        root_dir = os.path.join(path, 'submissions_inference_0_5')\n",
-    "        if not os.path.exists(root_dir): os.mkdir(root_dir)\n",
-    "        division_dir = os.path.join(root_dir, division)\n",
-    "        if not os.path.exists(division_dir): os.mkdir(division_dir)\n",
-    "        organization_dir = os.path.join(division_dir, organization)\n",
-    "        if not os.path.exists(organization_dir): os.mkdir(organization_dir)\n",
-    "        # \"systems\"/\n",
-    "        systems_dir = os.path.join(organization_dir, 'systems')\n",
-    "        if not os.path.exists(systems_dir): os.mkdir(systems_dir)\n",
-    "        system_json_name = '%s.json' % system\n",
-    "        system_json_path = os.path.join(systems_dir, system_json_name)\n",
-    "        with open(system_json_path, 'w') as system_json_file:\n",
-    "            json.dump(systems.get(system, default_system_desc_id), system_json_file, indent=2)\n",
-    "            print('  |_ %s' % system_json_name)\n",
-    "        # \"results\"/\n",
     "        results_dir = os.path.join(organization_dir, 'results')\n",
     "        if not os.path.exists(results_dir): os.mkdir(results_dir)\n",
     "        system_dir = os.path.join(results_dir, system)\n",
@@ -502,7 +595,7 @@
     "            accuracy_json_name = 'mlperf_log_accuracy.json'\n",
     "            accuracy_json_path = os.path.join(last_dir, accuracy_json_name)\n",
     "            with open(accuracy_json_path, 'w') as accuracy_json_file:\n",
-    "                json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file)\n",
+    "                json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file, indent=2)\n",
     "                print('  |_ %s' % accuracy_json_name)\n",
     "            if mode == 'accuracy':\n",
     "                # FIXME: Do not hardcode - locate via CK.\n",
@@ -519,12 +612,14 @@
     "#             trace_json_name = 'mlperf_log_trace.json'\n",
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
     "#             with open(trace_json_path, 'w') as trace_json_file:\n",
-    "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file)\n",
+    "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)\n",
     "    \n",
+    "    print(\"\")\n",
     "    # FIXME: Do not hardcode - locate via CK.\n",
     "    submission_checker_py = '$HOME/CK_TOOLS/mlperf-inference-upstream.master/inference/v0.5/tools/submission/submission-checker.py'\n",
     "    !python3 $submission_checker_py --input $root_dir --submitter $submitter\n",
-    "    return\n",
+    "    \n",
+    "    return dfs\n",
     "\n",
     "dfs = get_experimental_results(repo_uoa)"
    ]
