Update firefly description.

--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -121,35 +121,35 @@
     "    \"system_name\": \"Firefly-RK3399\",\n",
     "\n",
     "    \"number_of_nodes\": \"1\",\n",
-    "    \"host_processor_model_name\": \"Arm Cortex-A73 (big), Arm Cortex-A53 (LITTLE)\",\n",
+    "    \"host_processor_model_name\": \"Arm Cortex-A72 MP2 (big); Arm Cortex-A53 MP4 (LITTLE)\",\n",
     "    \"host_processors_per_node\": \"1\",\n",
-    "    \"host_processor_core_count\": \"2 (big), 4 (LITTLE)\",\n",
+    "    \"host_processor_core_count\": \"2 (big); 4 (LITTLE)\",\n",
     "    \"host_processor_frequency\": \"1800 MHz (big), 1400 MHz (LITTLE)\",\n",
-    "    \"host_processor_caches\": \"N/A\",\n",
-    "    \"host_memory_configuration\": \"?\",\n",
+    "    \"host_processor_caches\": \"48 kB L1 instruction cache, 32 kB L1 data cache, 1 MB L2 unified cache (big); 32 kB L1 instruction cache, 32 kB L1 data cache, 512 kB L2 unified cache (LITTLE)\",    \n",
+    "    \"host_memory_configuration\": \"-\",\n",
     "    \"host_memory_capacity\": \"4 GB\",\n",
     "    \"host_storage_capacity\": \"128 GB\",\n",
-    "    \"host_storage_type\": \"microSD\",\n",
-    "    \"host_processor_interconnect\": \"N/A\",\n",
-    "    \"host_networking\": \"N/A\",\n",
-    "    \"host_networking_topology\": \"N/A\",\n",
+    "    \"host_storage_type\": \"SanDisk Extreme microSD\",\n",
+    "    \"host_processor_interconnect\": \"-\",\n",
+    "    \"host_networking\": \"-\",\n",
+    "    \"host_networking_topology\": \"-\",\n",
     "\n",
     "    \"accelerators_per_node\": \"1\",\n",
     "    \"accelerator_model_name\": \"Arm Mali-T860 MP4\",\n",
     "    \"accelerator_frequency\": \"800 MHz\",\n",
-    "    \"accelerator_host_interconnect\": \"N/A\",\n",
-    "    \"accelerator_interconnect\": \"N/A\",\n",
-    "    \"accelerator_interconnect_topology\": \"N/A\",\n",
-    "    \"accelerator_memory_capacity\": \"4 GB (shared)\",\n",
-    "    \"accelerator_memory_configuration\": \"?\",\n",
-    "    \"accelerator_on-chip_memories\": \"N/A\",\n",
+    "    \"accelerator_host_interconnect\": \"-\",\n",
+    "    \"accelerator_interconnect\": \"-\",\n",
+    "    \"accelerator_interconnect_topology\": \"-\",\n",
+    "    \"accelerator_memory_capacity\": \"4 GB (shared with host)\",\n",
+    "    \"accelerator_memory_configuration\": \"-\",\n",
+    "    \"accelerator_on-chip_memories\": \"-\",\n",
     "    \"cooling\": \"on-board fan\",\n",
     "    \"hw_notes\": \"http://en.t-firefly.com/product/rk3399/\",\n",
     "\n",
     "    \"framework\": \"TFLite-v1.15-rc2\",\n",
     "    \"operating_system\": \"Ubuntu 16.04.6 LTS\",\n",
-    "    \"other_software_stack\": \"Collective Knowledge v1.11.1\",\n",
-    "    \"sw_notes\": \"Powered by CK\"\n",
+    "    \"other_software_stack\": \"GCC 7.4.0; Python 3.5.2\",\n",
+    "    \"sw_notes\": \"Powered by Collective Knowledge v1.11.1\"\n",
     "}"
    ]
   },
