--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -144,7 +144,7 @@
     "    \"accelerator_memory_configuration\": \"-\",\n",
     "    \"accelerator_on-chip_memories\": \"-\",\n",
     "    \"cooling\": \"on-board fan\",\n",
-    "    \"hw_notes\": \"http://en.t-firefly.com/product/rk3399/\",\n",
+    "    \"hw_notes\": \"http://en.t-firefly.com/product/rk3399/; http://opensource.rock-chips.com/wiki_RK3399\",\n",
     "\n",
     "    \"framework\": \"TFLite-v1.15-rc2\",\n",
     "    \"operating_system\": \"Ubuntu 16.04.6 LTS\",\n",
@@ -446,7 +446,12 @@
     "            (_, division, task, platform, library, benchmark, scenario, mode) = tags\n",
     "        organization = submitter\n",
     "        system = platform+'-'+library\n",
-    "\n",
+    "        if library.startswith('tflite'):\n",
+    "            implementation = task+'-tflite'\n",
+    "        elif library.startswith('armnn-tflite'):\n",
+    "            implementation = task+'-armnn-tflite'\n",
+    "        else: # Official app with CK adaptations.\n",
+    "            implementation = 'mlperf-inference-vision'\n",
     "        # Directory structure according to the Inference section of the General MLPerf Submission Rules:\n",
     "        # https://github.com/mlperf/policies/blob/master/submission_rules.adoc#552-inference\n",
     "        #\n",
@@ -480,21 +485,16 @@
     "        # FIXME: For now, not always \"per reference\".\n",
     "        benchmark_dir = os.path.join(code_dir, benchmark)\n",
     "        if not os.path.exists(benchmark_dir): os.mkdir(benchmark_dir)\n",
-    "        implementation_id = task+'_'+scenario\n",
-    "        implementation_dir = os.path.join(benchmark_dir, implementation_id)\n",
+    "        implementation_dir = os.path.join(benchmark_dir, implementation)\n",
     "        if not os.path.exists(implementation_dir): os.mkdir(implementation_dir)\n",
     "        print('%s' % code_dir)\n",
-    "        print('  |_ %s [DEFAULT]' % implementation_id)\n",
-    "#         # Would seem logical but not what the checker expects.     \n",
-    "#         for library in [ 'tflite', 'armnn-tflite' ]:\n",
-    "#             implementation_dir = os.path.join(benchmark_dir, task+'-'+library)\n",
-    "#             if not os.path.exists(implementation_dir): os.mkdir(implementation_dir)\n",
+    "        print('  |_ %s [DEFAULT]' % implementation)\n",
     "        #\n",
     "        #     \"measurements\"/\n",
     "        #       <system_desc_id>/\n",
     "        #         <benchmark>/\n",
     "        #           <scenario>/\n",
-    "        #             <system_desc_id>_<implementation_id>_<scenario>.json\n",
+    "        #             <system_desc_id>_<implementation_id>.json\n",
     "        #             README.md\n",
     "        #             user.conf\n",
     "        #             mlperf.conf\n",
@@ -510,12 +510,16 @@
     "        if not os.path.exists(scenario_dir): os.mkdir(scenario_dir)\n",
     "        print(scenario_dir)\n",
     "        # Touch empty files.\n",
-    "        # <system_desc_id>_<implementation_id>_<scenario>.json\n",
-    "        s_i_s_json_name = system+'_'+task+'_'+scenario+'.json'\n",
-    "        s_i_s_json_path = os.path.join(scenario_dir, s_i_s_json_name)\n",
-    "        with open(s_i_s_json_path, 'w') as s_i_s_json_file:\n",
-    "            json.dump(systems_implementations.get(system, default_system_implementation), s_i_s_json_file, indent=2)\n",
-    "            print('  |_ %s [DEFAULT]' % s_i_s_json_name)\n",
+    "        # <system_desc_id>_<implementation_id>.json\n",
+    "        system_implementation_json_name = system+'_'+implementation+'.json'\n",
+    "        system_implementation_json_path = os.path.join(scenario_dir, system_implementation_json_name)\n",
+    "        with open(system_implementation_json_path, 'w') as system_implementation_json_file:\n",
+    "            system_implementation = systems_implementations.get(system, default_system_implementation)\n",
+    "            json.dump(system_implementation, system_implementation_json_file, indent=2)\n",
+    "            if system_implementation == default_system_implementation:\n",
+    "                print('  |_ %s [DEFAULT]' % system_implementation_json_name)\n",
+    "            else:\n",
+    "                print('  |_ %s [%s]' % (system_implementation_json_name, system))\n",
     "        # README.md\n",
     "        readme_name = 'README.md'\n",
     "        readme_path = os.path.join(scenario_dir, readme_name)\n",
