--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -329,25 +329,42 @@
     "# URL for MobileNets-v1-20180802\n",
     "zenodo_url = 'https://zenodo.org/record/2269307/files'\n",
     "implementation = 'image-classification-tflite'\n",
+    "\n",
+    "def add_implementation_benchmark(implementation_benchmarks, version, multiplier, resolution):\n",
+    "    base_url = 'https://zenodo.org/record/2269307/files' if version == 1 else 'https://zenodo.org/record/2266646/files'\n",
+    "    url = '{}/mobilenet_v{}_{}_{}.tgz'.format(base_url, version, multiplier, resolution)\n",
+    "    benchmark = 'mobilenet-v{}-{}-{}'.format(version, multiplier, resolution)\n",
+    "    if implementation == 'image-classification-tflite':\n",
+    "        weights_transformations = 'TFLite'\n",
+    "    elif implementation == 'image-classification-tflite':\n",
+    "        weights_transformations = 'TFLite -> ArmNN'\n",
+    "    implementation_benchmark = implementation+'-'+benchmark\n",
+    "    implementation_benchmarks[implementation_benchmark] = {\n",
+    "        \"input_data_types\": \"fp32\",\n",
+    "        \"weight_data_types\": \"fp32\",\n",
+    "        \"retraining\": \"no\",\n",
+    "        \"starting_weights_filename\": url,\n",
+    "        \"weight_transformations\": weights_transformations\n",
+    "    }\n",
+    "    return\n",
+    "\n",
     "implementation_benchmarks = {}\n",
-    "for version in [ 1 ]:\n",
-    "    for multiplier in [ 1.0, 0.75, 0.5, 0.25 ]:\n",
-    "        for resolution in [ 224, 192, 160, 128 ]:\n",
-    "            benchmark = 'mobilenet-v{}-{}-{}'.format(version, multiplier, resolution)\n",
-    "            url = '{}/mobilenet_v{}_{}_{}.tgz'.format(zenodo_url, version, multiplier, resolution)\n",
-    "            if implementation == 'image-classification-tflite':\n",
-    "                weights_transformations = 'TFLite'\n",
-    "            elif implementation == 'image-classification-tflite':\n",
-    "                weights_transformations = 'TFLite -> ArmNN'\n",
-    "            implementation_benchmark = implementation+'-'+benchmark                \n",
-    "            implementation_benchmarks[implementation_benchmark] = {\n",
-    "                \"input_data_types\": \"fp32\",\n",
-    "                \"weight_data_types\": \"fp32\",\n",
-    "                \"retraining\": \"no\",\n",
-    "                \"starting_weights_filename\": url,\n",
-    "                \"weight_transformations\": weights_transformations\n",
-    "            }\n",
-    "# pprint(implementation_benchmarks)"
+    "# MobileNet-v1.\n",
+    "version = 1\n",
+    "for multiplier in [ 1.0, 0.75, 0.5, 0.25 ]:\n",
+    "    for resolution in [ 224, 192, 160, 128 ]:\n",
+    "        add_implementation_benchmark(implementation_benchmarks, version, multiplier, resolution)\n",
+    "\n",
+    "# MobileNet-v2.\n",
+    "version = 2\n",
+    "for multiplier in [ 1.0, 0.75, 0.5, 0.35 ]:\n",
+    "    for resolution in [ 224, 192, 160, 128, 96 ]:\n",
+    "        add_implementation_benchmark(implementation_benchmarks, version, multiplier, resolution)\n",
+    "add_implementation_benchmark(implementation_benchmarks, version=2, multiplier=1.3, resolution=224)\n",
+    "add_implementation_benchmark(implementation_benchmarks, version=2, multiplier=1.4, resolution=224)\n",
+    "        \n",
+    "from pprint import pprint\n",
+    "pprint(implementation_benchmarks)"
    ]
   },
   {
@@ -426,8 +443,8 @@
    "source": [
     "Download experimental data and add CK repositories as follows:\n",
     "```\n",
-    "$ wget https://www.dropbox.com/s/<...>/mlperf.*.zip\n",
-    "$ ck add repo --zip=mlperf.*.zip\n",
+    "wget https://www.dropbox.com/s/jbpdh6c5d8fgwpl/mlperf.open.image-classification.firefly.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.firefly.zip\n",
     "```"
    ]
   },
@@ -437,10 +454,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!ck recache repo\n",
-    "repo_uoa = 'mlperf.open.image-classification.firefly'\n",
-    "!ck list $repo_uoa:experiment:* | sort\n",
-    "print (\"*****************************************\")"
+    "repos = [\n",
+    "    'mlperf.open.image-classification.firefly'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for repo_uoa in repos:\n",
+    "    !ck list $repo_uoa:experiment:* | sort\n",
+    "    print (\"*\" * 80)"
    ]
   },
   {
