Prepare for ArmNN data (tags to include backend).

--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -508,11 +508,23 @@
     "        print(\"\")\n",
     "        \n",
     "        tags = r['dict']['tags']\n",
-    "        # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"tflite-v1.15\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"performance\" ]\n",
     "        if 'accuracy' in tags:\n",
-    "            (_, division, task, platform, library, benchmark, scenario, mode, preprocessing) = tags\n",
-    "        elif 'performance' in tags:\n",
-    "            (_, division, task, platform, library, benchmark, scenario, mode) = tags\n",
+    "            if 'neon' in tags or 'opencl' in tags:\n",
+    "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"armnn-v19.08\", \"neon\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"accuracy\", \"using-opencv\" ]\n",
+    "                (_, division, task, platform, library, backend, benchmark, scenario, mode, preprocessing) = tags\n",
+    "            else:\n",
+    "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"tflite-v1.15\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"accuracy\", \"using-opencv\" ]\n",
+    "                (_, division, task, platform, library, benchmark, scenario, mode, preprocessing) = tags\n",
+    "        elif 'performance' in tags:            \n",
+    "            if 'neon' in tags or 'opencl' in tags:\n",
+    "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"armnn-v19.08\", \"neon\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"performance\" ]\n",
+    "                (_, division, task, platform, library, backend, benchmark, scenario, mode) = tags\n",
+    "            else:\n",
+    "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"tflite-v1.15\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"performance\" ]\n",
+    "                (_, division, task, platform, library, benchmark, scenario, mode) = tags\n",
+    "        else:\n",
+    "            raise \"Expected 'accuracy' or 'performance' in tags!\"\n",
+    "            \n",
     "        organization = submitter\n",
     "        system = platform+'-'+library\n",
     "        division_system = division+'-'+system\n",
