Update overview. Minor improvements.

--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"overview\"></a>\n",
+    "## Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Jupyter notebook covers [dividiti](http://dividiti.com)'s submissions to [MLPerf Inference v0.5](https://github.com/mlperf/inference/tree/master/v0.5). It validates that experimental data obtained via automated, portable and reproducible [Collective Knowledge](http://cknowledge.org) workflows conforms to [General MLPerf Submission Rules](https://github.com/mlperf/policies/blob/master/submission_rules.adoc)\n",
+    "and [MLPerf Inference Rules](https://github.com/mlperf/inference_policies/blob/master/inference_rules.adoc), including runnning the official [`submission_checker.py`](https://github.com/mlperf/inference/blob/master/v0.5/tools/submission/submission-checker.py)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Table of Contents"
    ]
   },
@@ -22,23 +38,6 @@
     "1. [Includes](#includes)\n",
     "1. [Systems](#systems)\n",
     "  1. [Firefly-RK3399](#systems_firefly)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"overview\"></a>\n",
-    "## Overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [General MLPerf Submission Rules](https://github.com/mlperf/policies/blob/master/submission_rules.adoc)\n",
-    "- [MLPerf Inference Rules](https://github.com/mlperf/inference_policies/blob/master/inference_rules.adoc)\n",
-    "- [`submission_checker.py`](https://github.com/mlperf/inference/blob/master/v0.5/tools/submission/submission-checker.py)"
    ]
   },
   {
@@ -66,7 +65,9 @@
     "import sys\n",
     "import json\n",
     "import re\n",
-    "from copy import deepcopy"
+    "\n",
+    "from copy import deepcopy\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -173,15 +174,6 @@
     "save_fig_dir = os.path.join(os.path.expanduser(\"~\"), 'mlperf-dividiti')\n",
     "if not os.path.exists(save_fig_dir):\n",
     "    os.mkdir(save_fig_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pprint import pprint"
    ]
   },
   {
@@ -321,23 +313,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate implementation_benchmarks dictionary.\n",
-    "# URL for MobileNets-v1-20180802\n",
-    "zenodo_url = 'https://zenodo.org/record/2269307/files'\n",
     "implementation = 'image-classification-tflite'\n",
-    "\n",
     "def add_implementation_benchmark(implementation_benchmarks, version, multiplier, resolution):\n",
     "    base_url = 'https://zenodo.org/record/2269307/files' if version == 1 else 'https://zenodo.org/record/2266646/files'\n",
     "    url = '{}/mobilenet_v{}_{}_{}.tgz'.format(base_url, version, multiplier, resolution)\n",
     "    benchmark = 'mobilenet-v{}-{}-{}'.format(version, multiplier, resolution)\n",
     "    if implementation == 'image-classification-tflite':\n",
     "        weights_transformations = 'TFLite'\n",
-    "    elif implementation == 'image-classification-tflite':\n",
+    "    elif implementation == 'image-classification-armnn-tflite':\n",
     "        weights_transformations = 'TFLite -> ArmNN'\n",
+    "    else:\n",
+    "        raise \"Unknown implementation '%s'!\" % implementation\n",
     "    implementation_benchmark = implementation+'-'+benchmark\n",
     "    implementation_benchmarks[implementation_benchmark] = {\n",
     "        \"input_data_types\": \"fp32\",\n",
@@ -363,8 +354,8 @@
     "add_implementation_benchmark(implementation_benchmarks, version=2, multiplier=1.3, resolution=224)\n",
     "add_implementation_benchmark(implementation_benchmarks, version=2, multiplier=1.4, resolution=224)\n",
     "        \n",
-    "from pprint import pprint\n",
-    "pprint(implementation_benchmarks)"
+    "# from pprint import pprint\n",
+    "# pprint(implementation_benchmarks)"
    ]
   },
   {
@@ -505,7 +496,7 @@
     "        if r['return']>0:\n",
     "            print('Error: %s' % r['error'])\n",
     "            exit(1)\n",
-    "        print(\"\")\n",
+    "        print (\"*\" * 80)\n",
     "        \n",
     "        tags = r['dict']['tags']\n",
     "        if 'accuracy' in tags:\n",
@@ -708,13 +699,13 @@
     "                    accuracy_txt_file.writelines(accuracy_txt)\n",
     "                    # Print the first line containing accuracy info.\n",
     "                    print('  |_ %s (\"%s\")' % (accuracy_txt_name, accuracy_txt[0]))\n",
-    "#             # Trace file (an omit trace from v0.5).\n",
+    "#             # Trace file (should omit trace from v0.5).\n",
     "#             trace_json_name = 'mlperf_log_trace.json'\n",
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
     "#             with open(trace_json_path, 'w') as trace_json_file:\n",
     "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)\n",
     "\n",
-    "    print(\"\")\n",
+    "    print (\"*\" * 80)\n",
     "    # FIXME: Do not hardcode - locate via CK.\n",
     "    submission_checker_py = '$HOME/CK_TOOLS/mlperf-inference-upstream.master/inference/v0.5/tools/submission/submission-checker.py'\n",
     "    !python3 $submission_checker_py --input $root_dir --submitter $submitter\n",
