--- a/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/jnotebook.ipynb
@@ -313,13 +313,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate implementation_benchmarks dictionary.\n",
+    "implementation_benchmarks = {}\n",
     "implementation = 'image-classification-tflite'\n",
-    "def add_implementation_benchmark(implementation_benchmarks, version, multiplier, resolution):\n",
+    "\n",
+    "implementation_mobilenet = implementation+'-'+'mobilenet'\n",
+    "implementation_benchmarks[implementation_mobilenet] = {\n",
+    "    \"input_data_types\": \"fp32\",\n",
+    "    \"weight_data_types\": \"fp32\",\n",
+    "    \"retraining\": \"no\",\n",
+    "    \"starting_weights_filename\": \"https://zenodo.org/record/2269307/files/mobilenet_v1_1.0_224.tgz\",\n",
+    "    \"weight_transformations\": \"TFLite\"\n",
+    "}\n",
+    "\n",
+    "implementation_resnet = implementation+'-'+'resnet'\n",
+    "implementation_benchmarks[implementation_resnet] = {\n",
+    "    \"input_data_types\": \"fp32\",\n",
+    "    \"weight_data_types\": \"fp32\",\n",
+    "    \"retraining\": \"no\",\n",
+    "    \"starting_weights_filename\": \"https://zenodo.org/record/2535873/files/resnet50_v1.pb\",\n",
+    "    \"weight_transformations\": \"TF -> TFLite\"\n",
+    "}\n",
+    "\n",
+    "# Add any MobileNets-v1,v2 model.\n",
+    "def add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution):\n",
     "    base_url = 'https://zenodo.org/record/2269307/files' if version == 1 else 'https://zenodo.org/record/2266646/files'\n",
     "    url = '{}/mobilenet_v{}_{}_{}.tgz'.format(base_url, version, multiplier, resolution)\n",
     "    benchmark = 'mobilenet-v{}-{}-{}'.format(version, multiplier, resolution)\n",
@@ -339,21 +360,19 @@
     "    }\n",
     "    return\n",
     "\n",
-    "implementation_benchmarks = {}\n",
     "# MobileNet-v1.\n",
     "version = 1\n",
     "for multiplier in [ 1.0, 0.75, 0.5, 0.25 ]:\n",
     "    for resolution in [ 224, 192, 160, 128 ]:\n",
-    "        add_implementation_benchmark(implementation_benchmarks, version, multiplier, resolution)\n",
-    "\n",
+    "        add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution)\n",
     "# MobileNet-v2.\n",
     "version = 2\n",
     "for multiplier in [ 1.0, 0.75, 0.5, 0.35 ]:\n",
     "    for resolution in [ 224, 192, 160, 128, 96 ]:\n",
-    "        add_implementation_benchmark(implementation_benchmarks, version, multiplier, resolution)\n",
-    "add_implementation_benchmark(implementation_benchmarks, version=2, multiplier=1.3, resolution=224)\n",
-    "add_implementation_benchmark(implementation_benchmarks, version=2, multiplier=1.4, resolution=224)\n",
-    "        \n",
+    "        add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution)\n",
+    "add_implementation_mobilenet(implementation_benchmarks, version=2, multiplier=1.3, resolution=224)\n",
+    "add_implementation_mobilenet(implementation_benchmarks, version=2, multiplier=1.4, resolution=224)\n",
+    "\n",
     "# from pprint import pprint\n",
     "# pprint(implementation_benchmarks)"
    ]
@@ -446,7 +465,8 @@
    "outputs": [],
    "source": [
     "repos = [\n",
-    "    'mlperf.open.image-classification.firefly'\n",
+    "#    'mlperf.open.image-classification.firefly'\n",
+    "    'mlperf.closed.image-classification.firefly'\n",
     "]"
    ]
   },
@@ -475,13 +495,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', path=None, submitter='dividiti'):\n",
+    "def get_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', submitter='dividiti', path=None):\n",
     "    if not path:\n",
     "        path_list = !ck find repo:$repo_uoa\n",
     "        path = path_list[0]\n",
     "    root_dir = os.path.join(path, 'submissions_inference_0_5')\n",
-    "    if not os.path.exists(root_dir): os.mkdir(root_dir)        \n",
-    "    print(\"Storing results under '%s' ...\" % root_dir)\n",
+    "    if not os.path.exists(root_dir): os.mkdir(root_dir)\n",
+    "    print(\"Storing results under '%s'\" % root_dir)\n",
     "    \n",
     "    r = ck.access({'action':'search', 'repo_uoa':repo_uoa, 'module_uoa':module_uoa, 'tags':tags})\n",
     "    if r['return']>0:\n",
